# rytmuz

./: .gitignore  LICENSE  README.md  RELEASING.md  cache.py  main.py  player.py  pyproject.toml  thumbnail.py  youtube_search.py
.github/workflows/: bump-and-release.yml  release.yml  test-release.yml
src/rytmuz/: __init__.py  cache.py  history.py  i18n.py  main.py  mock_data.py  player.py  thumbnail.py  youtube_search.py
