[project]
name = "rytmuz"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.187.0",
    "pillow>=12.0.0",
    "platformdirs>=4.0.0",
    "requests>=2.32.5",
    "rich-pixels>=3.0.1",
    "textual>=6.6.0",
    "textual-dev>=1.8.0",
]

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[project.scripts]
rytmuz = "rytmuz:main"
