[project]
name = "rytmuz"
version = "0.1.0"
description = "A kid-friendly YouTube music player for the terminal"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Sven Ulland", email = "sven.ulland@gmail.com"}
]
keywords = ["youtube", "music", "player", "terminal", "tui", "mpv", "yt-dlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = [
    "google-api-python-client>=2.187.0",
    "pillow>=12.0.0",
    "platformdirs>=4.0.0",
    "requests>=2.32.5",
    "rich-pixels>=3.0.1",
    "textual>=6.6.0",
]

[dependency-groups]
dev = [
    "textual-dev>=1.8.0",
]

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[project.scripts]
rytmuz = "rytmuz:main"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
